# TealangCompiler

./: .clang-format  .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  env.sh  environment.sh  params
docs/: Keywords.md  README.md
docs/.obsidian/: workspace.json
docs/Compiler/: Compiler.md
docs/Tea/: Tea.md
docs/Tea/Examples/: HelloWorld.ast  HelloWorld200k.tea  Main.ast  Main.tea
src/: Global.hpp  main.cpp
src/analyzer/: Analyzer.cpp  Analyzer.hpp
src/ast/: AST.cpp  AST.hpp  StatementType.hpp  SyntaxTree.cpp  SyntaxTree.hpp
src/codegen/: CodeGenerator.cpp  CodeGenerator.hpp
src/compiler/: CLI.cpp  CLI.hpp  Compiler.cpp  Compiler.hpp  CompilerContext.cpp  CompilerContext.hpp  CompilerOptions.cpp  CompilerOptions.hpp
src/lexer/: Lexer.cpp  Lexer.hpp
src/parser/: Parser.cpp  Parser.hpp
src/reader/: Reader.cpp  Reader.hpp
src/tokens/: Token.cpp  Token.hpp  TokenType.hpp
src/trace/: StackTrace.cpp  StackTrace.hpp  Trigger.cpp  Trigger.hpp  TriggerType.hpp  Value.hpp
test_data/0.0.0/0_Empty/: Main.tea
test_data/0.0.0/1_Hello_World/: Main.tea
test_data/0.0.0/2_Arguments/: Main.tea
